@startuml
title CrimsonBank Database ER Diagram

legend left
  || = One and only one
  |o = Zero or one
  }o = Zero or many
  }| = One or many
endlegend

entity "staff" as staff {
  * staff_id : INT <<PK>>
  --
  email : VARCHAR(100) <<UQ>>
  username : VARCHAR(50) <<UQ>>
  password : VARCHAR(255)
  full_name : VARCHAR(100)
  role : VARCHAR(50)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "customers" as customers {
  * customer_id : INT <<PK>>
  --
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  nic : VARCHAR(20) <<UQ>>
  email : VARCHAR(100)
  phone_number : VARCHAR(20)
  address : VARCHAR(255)
  city : VARCHAR(50)
  postal_code : VARCHAR(10)
  date_of_birth : DATE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "accounts" as accounts {
  * account_id : INT <<PK>>
  --
  customer_id : INT <<FK>>
  account_number : VARCHAR(20) <<UQ>>
  account_type : VARCHAR(50)
  balance : DECIMAL(15,2)
  status : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "transactions" as transactions {
  * transaction_id : INT <<PK>>
  --
  account_id : INT <<FK>>
  transaction_type : VARCHAR(20)
  amount : DECIMAL(15,2)
  balance_after : DECIMAL(15,2)
  description : VARCHAR(255)
  related_account_id : INT <<FK, nullable>>
  created_at : TIMESTAMP
}

entity "loans" as loans {
  * loan_id : INT <<PK>>
  --
  customer_id : INT <<FK>>
  account_id : INT <<FK>>
  loan_amount : DECIMAL(15,2)
  interest_rate : DECIMAL(5,2)
  tenure_months : INT
  status : VARCHAR(20)
  approved_by : INT <<FK, nullable>>
  approval_date : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "audit_log" as audit_log {
  * log_id : INT <<PK>>
  --
  action : VARCHAR(50)
  description : VARCHAR(500)
  staff_id : INT <<FK, nullable>>
  customer_id : INT <<FK, nullable>>
  account_id : INT <<FK, nullable>>
  transaction_id : INT <<FK, nullable>>
  loan_id : INT <<FK, nullable>>
  created_at : TIMESTAMP
}

customers ||--o{ accounts : "customer_id (FK)\nON DELETE CASCADE"

accounts ||--o{ transactions : "account_id (FK)\nON DELETE CASCADE"
accounts ||--o{ transactions : "related_account_id (FK)\nON DELETE SET NULL"

customers ||--o{ loans : "customer_id (FK)\nON DELETE CASCADE"
accounts ||--o{ loans : "account_id (FK)\nON DELETE CASCADE"
staff ||--o{ loans : "approved_by (FK)\nON DELETE SET NULL"

staff ||--o{ audit_log : "staff_id (FK)\nON DELETE SET NULL"
customers ||--o{ audit_log : "customer_id (FK)\nON DELETE SET NULL"
accounts ||--o{ audit_log : "account_id (FK)\nON DELETE SET NULL"
transactions ||--o{ audit_log : "transaction_id (FK)\nON DELETE SET NULL"
loans ||--o{ audit_log : "loan_id (FK)\nON DELETE SET NULL"

note right
  Cardinality notation: || = 1, |o = 0..1, }o = 0..*, }| = 1..*
  ON DELETE behaviors are shown in relationship labels.
end note

@enduml
